[tool.poetry]
name = "TornAPIWrapper"
version = "1.0.3"
description = "A Python wrapper for the Torn City API, providing access to Torn City data."
authors = ["Dustin Spencer <dspencej@gmail.com>", "cxdzc"]
license = "MIT"
readme = "README.md"
keywords = ["torn", "torn-city", "torn-city-api", "torncom", "wrapper", "api"]
homepage = "https://github.com/dspencej/TornAPIWrapper"
repository = "https://github.com/dspencej/TornAPIWrapper"
documentation = "https://github.com/dspencej/TornAPIWrapper#-documentations"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"